fixed divs in html and header text wraps around icon

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,3 +1,7 @@
 body {
   height: 100vh;
 }
+
+#comment-link {
+  float: right;
+}
